--- a/src/styles.css
+++ b/src/styles.css
@@ -3,20 +3,98 @@ body {
 	color: #dedede;
 	background: #222;
 	font-size: 1.2em;
-	margin: 1em;
 }
 
 .app-header {
 	margin: -0.5em -0.5em 0em -1em;
-	padding: 1em;
+	padding: 0.25em;
 	background: #111;
 	color: #dedede;
-}
-
-label {
-	display: table; /* block formatting, with a minimum width */
+	text-align: center;
 }
 
 a {
 	color: inherit;
+}
+
+.main-section {
+	display:flex;
+	flex-direction: column;
+}
+
+.letter-hive {
+	margin: 1em;
+}
+
+.letter-hex-letter {
+	font-size: 3em;
+}
+
+.answer-input {
+	font-size: 1em;
+}
+
+.answer-section {
+	margin: auto;
+}
+
+.letter-section {
+	display: flex;
+	flex-direction: column;
+	margin: auto;
+}
+
+button {
+	font-size: 1.5em;
+	margin: 0.2em;
+	color: inherit;
+	background: inherit;
+	border: solid 2px;
+	cursor: pointer;
+	border-radius: 1em;
+}
+
+button:hover {
+	background: rgb(94, 94, 94);
+}
+
+polygon, text {
+	cursor: pointer;
+}
+
+.letter-hex-polygon.required {
+	fill: #907900;
+}
+
+.letter-hex-polygon {
+	fill: #4a4a4a;
+}
+
+g:hover polygon {
+	fill: #5c5c5c;
+}
+
+g:hover polygon.required {
+	fill: #a88c00;
+}
+
+select {
+	display: block;
+	font-size: inherit;
+	width: 100%;
+}
+
+footer {
+	margin-top: 3em;
+	text-align: center;
+}
+
+input[type="text"] {
+	color: white;
+  border: none;
+  border-bottom: solid 2px #5c5c5c;
+  outline: 0;
+  background: none;
+  font-size: 1em;
+  padding: 0.25em;
 }
